--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,5 +1,4 @@
-name: 编译红米note10pro-安卓11-ksu内核
-            支持ksu docker lxc kvm Kali-Nethunter
+name: 编译红米note10pro-安卓11-ksu-lxc-docker-kvm内核
 
 on:
   workflow_dispatch:
@@ -88,12 +87,12 @@ jobs:
     - name: 上传 Anykernel3
       uses: actions/upload-artifact@v3
       with:
-        name: 安卓12-mtk6853通用内核-卡刷包
+        name: 安卓11-红米note10pro内核-卡刷包
         path: kernel_workspace/AnyKernel3/*
         
 
     - name: 上传编译内核
       uses: actions/upload-artifact@v3
       with:
-        name: mtk6853通用内核-Image.gz
+        name: 红米note10pro内核-Image.gz
         path: kernel_workspace/android-kernel/out/arch/arm64/boot/Image.gz
